deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: just-speak-deployment
spec:
  selector:
    matchLabels:
      app: just-speak
  replicas: 3
  template:
    metadata:
      labels:
        app: just-speak
    spec:
      containers:
      - name: just-speak
        image: "codingnightmare/just-speak:v1"
        ports:
        - containerPort: 3000
