service.yaml
apiVersion: v1
kind: Service
metadata:
  name: just-speak-service
  labels:
    app: node-app
spec:
   ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: just-speak
  type: LoadBalancer
