ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: just-speak
  name: just-speak-ingress
spec:
  rules:
    - host: just-speak.be63186e-e68d-4bd7-8a48-05ffdd90103d.k8s.civo.com
      http:
        paths:
          -
            backend:
              service:
                name: just-speak
                port:
                  number: 3000
            path: /
            pathType: "Prefix"
